--- a/verizon_group_project/verizon_group_project/pom.xml
+++ b/verizon_group_project/verizon_group_project/pom.xml
@@ -71,6 +71,20 @@
 		    <version>1.2.17</version>
 		</dependency>
 		
+		<!-- Swagger -->
+			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
+			<dependency>
+			    <groupId>io.springfox</groupId>
+			    <artifactId>springfox-swagger2</artifactId>
+			    <version>2.9.2</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
+			<dependency>
+			    <groupId>io.springfox</groupId>
+			    <artifactId>springfox-swagger-ui</artifactId>
+			    <version>2.9.2</version>
+			</dependency>
+		
 		<dependency>
             <groupId>com.github.noraui</groupId>
             <artifactId>ojdbc7</artifactId>
