--- a/verizon_group_project/verizon_group_project/src/main/resources/application.properties
+++ b/verizon_group_project/verizon_group_project/src/main/resources/application.properties
@@ -1,19 +1,20 @@
 server.port=3333
 
 # Oracle settings
-spring.datasource.url=jdbc:oracle:thin:@10.123.79.59:1521:Georli04
-spring.datasource.username=T1086680
-spring.datasource.password=T1086680
-
 #spring.datasource.url=jdbc:oracle:thin:@10.123.79.59:1521:GEORLI04
-#spring.datasource.username=T1086642
-#spring.datasource.password=T1086642
+#spring.datasource.username=T1086680
+#spring.datasource.password=T1086680
+
+spring.datasource.url=jdbc:oracle:thin:@10.123.79.59:1521:GEORLI04
+spring.datasource.username=T1086642
+spring.datasource.password=T1086642
 
 # Jonathan login:
 #
 #spring.datasource.url=jdbc:oracle:thin:@10.123.79.59:1521:GEORLI04
 #spring.datasource.username=T1086651
 #spring.datasource.password=T1086651
+
 
 
 server.servlet.context-path=/verizon_group_project
@@ -34,4 +35,14 @@ logging.level.org.hibernate.type=info
 spring.jpa.properties.hibernate.show_sql: true
 #entitymanager.packagesToScan: com
 #samplecommit
+
+
+ #Spring security JWT secret key
+jwt.secret=infyverizon
+
+
+#server.ssl.key-password=Verizon
+#server.ssl.key-store=classpath:keystore.jks
+#server.ssl.key-store-type=JKS
+#server.ssl.key-alias=tomcat\u201D
 
