--- a/verizon_group_project/verizon_group_project/pom.xml
+++ b/verizon_group_project/verizon_group_project/pom.xml
@@ -26,6 +26,13 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>	
 		
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.12</version>
+    <scope>provided</scope>
+</dependency>
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
