--- a/verizon_group_project/verizon_group_project/src/main/resources/application.properties
+++ b/verizon_group_project/verizon_group_project/src/main/resources/application.properties
@@ -46,10 +46,10 @@ spring.jpa.properties.hibernate.show_sql: true
 #entitymanager.packagesToScan: com
 #samplecommit
 
-
- #Spring security JWT secret key
+#App properties
+#Spring security JWT secret key
 jwt.secret=infyverizon
-
+jwt.expiration=86400
 
 #server.ssl.key-password=Verizon
 #server.ssl.key-store=classpath:keystore.jks
