--- a/verizon_group_project/verizon_group_project/src/main/resources/application.properties
+++ b/verizon_group_project/verizon_group_project/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=3333
 
 # Oracle settings
-#spring.datasource.url=jdbc:oracle:thin:@10.123.79.59:1521:Georli04
+#spring.datasource.url=jdbc:oracle:thin:@10.123.79.59:1521:GEORLI04
 #spring.datasource.username=T1086680
 #spring.datasource.password=T1086680
 
